Bug 163967 - Copy-paste of hyperlink from Writer to Impress loses color and underline formatting
Summary: Copy-paste of hyperlink from Writer to Impress loses color and underline form...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2024-11-20 14:00 UTC by Gabor Kelemen (Collabora)
Modified: 2024-11-21 08:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (10.35 KB, application/vnd.oasis.opendocument.text)
2024-11-20 14:00 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in Writer and the pasted content in Impress (156.95 KB, image/png)
2024-11-20 14:00 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-11-20 14:00:23 UTC
Created attachment 197698 [details]
Example file from Writer

When the hyperlink in a Writer document is copy-pasted to Impress, the underline and character color formatting is lost.

1. Open attached file
2. Copy-paste the content from Writer to Impress
-> the link is not underlined and the red color set in the character style is reset to the Impress default blue.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7a7ba9cbee91485a9254949d1594352b3629c070
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-11-20 14:00:49 UTC
Created attachment 197699 [details]
Screenshot of the document in Writer and the pasted content in Impress
Comment 2 Commit Notification 2024-11-20 20:30:07 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1ed564ecb73f2cab3a921a5bde67b9db48ea04a3

tdf#163967 RTF: Pasting/loading hyperlink imports font color and underline

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.