tdf#163967 RTF: Pasting/loading hyperlink imports font color and underline

Hyperlinks are typically colored and underlined. The RTF import
- also used when pasting from clipbard - now evaluates font color
and underline in the field result.

Change-Id: I725fc3e94746c96d68379c021fb0c12cd3750096
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176714
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins